# deepcrunch

./: .coveragerc  .gitignore  CMakeLists.txt  E2E_TESTING_SUMMARY.md  LICENSE.md  MILESTONES.rst  Makefile  README.md  README.rst  dev_environment.yml  environment.dev.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ci_environment.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  lint.yml  test.yml
cmake/: DeepCrunchConfig.cmake.in
csrc/: deepcrunch.h  macros.h  placeholder.cc  version.cc
deepcrunch/: __init__.py  cli.py  deepcrunch.py  main.py
deepcrunch/backend/: backend_registry.py  neural_compressor.py  types.py
deepcrunch/backend/engines/: base_backend.py  neural_compressor.py  onnx.py  torch_ao.py
deepcrunch/converter/: torch_onnx.py
deepcrunch/core/: __init__.py  model.py  trainer.py
deepcrunch/core/quantizer/: __init__.py  base_quantizer.py  quantizer_registry.py
deepcrunch/core/types/: quantize_strategy.py
deepcrunch/logger/: __init__.py  base_logger.py  wandb_logger.py
deepcrunch/performance/: __init__.py  e2e_latency.py  model_latency.py  model_size.py
deepcrunch/quantization/: __init__.py  base_quantizer.py  naive_quantizer.py
deepcrunch/utilities/: __init__.py  dynamic_load.py  exceptions.py  os_utils.py  time.py  torch_utils.py
deepcrunch/utils/: dynamic_load.py  time.py  torch_utils.py
docs/: README.md
docs/build_docs/: update_html.py
docs/build_docs/src/: conf.py  index.rst
examples/: 01_dynamic_quantization_simple.py  02_static_quantization_cnn.py  03_lstm_quantization.py  04_onnx_quantization.py  05_bert_quantization.py  06_resnet_quantization.py  07_gpt2_quantization.py  08_comprehensive_comparison.py  README.md
notebooks/api/: intel_neuralcomp.ipynb  lib_import.ipynb  run_clm.py  utils.ipynb
notebooks/demo/: 01_quantization_demo.ipynb
notebooks/llm/: Accelerate_quantization.ipynb  Bert-GLUE_OnnxRuntime_quantization.ipynb  bert_uncased.ipynb  bert_uncased_weight_only.ipynb  config.yml  gpt2-large.ipynb  hf_bert.ipynb
notebooks/trt/: trt.ipynb
notebooks/vision/: PyTorch_Quantisation.ipynb  resnet.ipynb  resnet.py  simple.ipynb  vgg_onnx.ipynb
tests/: README.md  __init__.py  conftest.py
tests/backend/: test_backend_registry.py  types_test.py
tests/core/: test_core.py
tests/e2e/: __init__.py  test_accuracy_performance.py  test_error_handling.py  test_onnx_e2e.py  test_torch_e2e.py
tests/logger/: test_wandb_logger.py
tests/utils/: test_dot_dict.py
