[metadata]
long_description=file: README.md
long_description_content_type=text/markdown

classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: Other/Proprietary License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[aliases]
test = pytest

[tool:pytest]
addopts = --capture=no